feat(): 1. Добавил возможность получения только активных объектов. 2. Добавил тесты.